# crip

./: .coverage  .gitignore  CITATION.cff  LICENSE  README.md  SharedTest.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: RunUnitTests.yml  python-publish.yml  unittest.yml
Data/DeData/: LI_XIANG.CT.ABDOMEN_11_ABDOMEN_DE_BT_(ADULT).0010.0001.2017.08.30.09.57.48.421875.782907008.IMA  real_bone.tif  (+9 more)
crip/: __init__.py  _rc.py  _typing.py  cri.py  de.py  dect.py  dl.py  fig.py  io.py  lowdose.py  mangoct.py  metric.py  paplot.py  physics.py  plot.py  postprocess.py  preprocess.py  shared.py  spec.py  spectrum.py  typing.py  utils.py  zoo.py
docs/: conf.py  crip.html  index.html  index.rst  search.js
example/: 02-Compute-LAC.ipynb  02-Spectrum.txt  03-DECT.ipynb  03-Low-Energy.tif  03-Spectrum-140.txt  03-Spectrum-80.txt  04-FPJ-FBP-via-mangoct.ipynb  AirCorrection.py  AlignMuInterp.py  CalcMuWater.py  MakeDEPhantom.py  PlotGdAtten.py  README.md  TruncArtifactCorrect.py  _importcrip.py  aircorrection.py  calcwatermu.py  gd10_gt.tif  rec_sens_high_gt.tif  truncatedArtifactCorrection.py  water_gt.tif
script/: all.sh  docgen.cmd  docgen.sh  publish.sh  reinstall.cmd
test/: _importcrip.py  _runAll.sh  deTest.py  io.test.py  ioTest.py  lowdoseTest.py  mangoctTest.py  metricTest.py  physicsTest.py  postprocessTest.py  preprocessTest.py  test__whatever.py  test_io.py  test_it_just_imports.py  test_lowdose.py  test_metric.py  test_physics.py  test_plot.py  test_postprocess.py  test_preprocess.py  test_shared.py  test_spec.py  test_utils.py
(+132 files in other folders)
