[metadata]
name = crip
version = 1.7.7dev
url = https://github.com/SEU-CT-Recon
author = z0gSh1u
author_email = zx.cs@qq.com
license = MIT License
description = An all-in-one tool for Cone-Beam CT Data IO, Pre/Post-process, and Physics, Dual Energy, Low Dose researches and everything only except Reconstruction.
