[metadata]
name = crip
version = 1.7.9
url = https://github.com/SEU-CT-Recon
author = z0gSh1u
author_email = zx.cs@qq.com
license = MIT License
description = CT Recon in Python: An all-in-one tool for Data IO, Pre/Post-process, Physics, Dual Energy, Low Dose and everything.
long_description = CT Recon in Python: An all-in-one tool for Data IO, Pre/Post-process, Physics, Dual Energy, Low Dose and everything.