[metadata]
name = crip
version = 1.8.5
url = https://github.com/SEU-CT-Recon
author = SEU-CT-Recon
author_email = zx.cs@qq.com
license = MIT License
description = CT Recon in Python is an All-in-one toolkit for CT Data IO, Pre/Post-process, Physics, Dual Energy, Low Dose and everything.
long_description = CT Recon in Python is an All-in-one toolkit for CT Data IO, Pre/Post-process, Physics, Dual Energy, Low Dose and everything.